Capturando input de valor, removendo letra e formatando para BRL

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -53,7 +53,7 @@
                 type="text"
                 name="amount"
                 id="amount"
-                placeholder="0,00"
+                placeholder="R$ 0,00"
                 required
               />
             </fieldset>
@@ -88,5 +88,7 @@
         </aside>
       </section>
     </main>
+
+    <script src="/scripts.js"></script>
   </body>
 </html>
