--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
       </section>
     </main>
 
-    <script src="/scripts.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
